tests/errors/e_func_in_pxd_support.pxd
fn foo():
    return 1

pub fn inline foo2():
    return 1

cdef api fn inline foo3():
    return 1
